Replace ListSelectionView for customer selection with ChoiceBox